[package]
name = "caspaxos"
version = "0.1.0"
authors = ["Tyler Neely <tyler@nats.io>", "Stjepan Glavina <stjepan@nats.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
natsio = "0.3.2"
sled = "0.33.0"
serde_derive = "1.0.112"
serde_json = "1.0.55"
serde = "1.0.112"
rand = "0.7.3"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
futures = "0.3.5"
smol = "0.1.18"
async-channel = "1.1.1"
color-backtrace = "0.4.2"
zerocopy = "0.3.0"
byteorder = "1.3.4"
bincode = "1.3.1"
crc32fast = "1.2.0"
