[package]
name = "caspaxos-kv"
description = "A simple simulator hardened KV store backed by caspaxos."
license = "Apache-2.0"
version = "0.1.0"
authors = ["Tyler Neely <tyler@nats.io>", "Stjepan Glavina <stjepan@nats.io>"]
edition = "2018"

[features]
pretty_backtrace = ["color-backtrace"]
fault_injection = []

[profile.release]
debug = true

[dependencies]
sled = "0.34.2"
rand = "0.7.3"
uuid = { version = "0.8.1", features = ["v4"] }
smol = "0.3.1"
async-channel = "1.1.1"
color-backtrace = { version = "0.4.2", optional = true }
crc32fast = "1.2.0"
historian = "4.0.3"
async-mutex = "1.1.5"
futures-channel = "0.3.5"
log = "0.4.11"

[dev-dependencies]
quickcheck = "0.9.2"
env_logger = "0.7.1"
