[package]
name = "caspaxos-kv"
description = "A simple simulator hardened KV store backed by caspaxos."
license = "Apache-2.0"
version = "0.2.1"
authors = ["Tyler Neely <tyler@nats.io>", "Stjepan Glavina <stjepan@nats.io>"]
edition = "2018"

[features]
pretty_backtrace = ["color-backtrace"]
fault_injection = []

[profile.release]
debug = true

[dependencies]
color-backtrace = { version = "0.4.2", optional = true }
crc32fast = "1.2.0"
futures-channel = "0.3.5"
historian = "4.0.3"
log = "0.4.11"
rand = "0.7.3"
sled = "0.34.2"
smol = "1.0.1"
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
color-backtrace = "0.4.2"
env_logger = "0.7.1"
quickcheck = "0.9.2"
